src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationBoolAssignString.deca
//Description :
//	affectation d'un string à une variable définie comme boolean
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : type incompatible <10, 6>

{
	boolean x="Hello";
}